TDD - zadanie domowe-rozszerzenie metody findByPrice